# zetachain_universal-nft

./: IMPLEMENTATION_SUMMARY.md  README.md  README_NFT.md  README_SOLANA_REQUIREMENTS.md  UNIVERSAL_NFT_SUMMARY.md  ZETACHAIN_UPDATES.md  final-status.sh  genPriv.ts  hardhat.config.ts  nft-cli.ts  package-lock.json  package.json
commands/universal/: index.ts  mintNFT.ts  setConnected.ts  transferNFT.ts
contracts/: Connected.sol  ConnectedNFT.sol  Universal.sol  UniversalNFT.sol  UniversalNFTCore.sol  UniversalNFTEvents.sol
examples/: completeNFTJourney.ts  crossChainNFTFlow.ts
scripts/: deployNFT.ts  localnet.sh
solana/: GATEWAY_INTEGRATION.md
solana/programs/connected/: Cargo.toml
solana/programs/connected/src/: lib.rs
solana/setup/: nftSetup.ts
src/test/: MockGateway.sol
test/: UniversalNFTTest.t.sol
