[package]
name = "connected"
version = "0.1.0"
description = "Test program used for testing withdraw and call feature"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "connected"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.0", features = ["metadata"] }
mpl-token-metadata = { version = "4.0.0" }
borsh = "0.10.3"
spl-associated-token-account = "3.0.2"
solana-program = "=1.18.15"
