[package]
name = "connected"
version = "0.1.0"
description = "Test program used for testing withdraw and call feature"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "connected"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
mpl-token-metadata = { version = "5.1.1" }
spl-associated-token-account = "6.0.0"
gateway = { git = "https://github.com/zeta-chain/protocol-contracts-solana", features = ["cpi"] }
